--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "rimraf": "^5.0.1",
     "sharp": "0.31.1",
     "tailwindcss": "^3.3.6"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "aos": "^2.3.4"
   }
 }
